--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 
   <packaging>pom</packaging>
 
+  <modules>
+    <module>cloud-provider-payment8081</module>
+  </modules>
   <!--统一管理jar包版本-->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,6 +25,8 @@
     <druid.version>1.1.16</druid.version>
     <mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
   </properties>
+
+
 
   <dependencyManagement>
     <dependencies>
