--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 
   <modules>
     <module>cloud-provider-payment8081</module>
+    <module>cloud-api-commons</module>
   </modules>
   <!--统一管理jar包版本-->
   <properties>
@@ -96,8 +97,19 @@
       <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <version>${lombok.version}}</version>
+        <version>${lombok.version}</version>
         <optional>true</optional>
+      </dependency>
+
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>2.9.2</version>
+      </dependency>
+      <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>2.9.2</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
