--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
   <modules>
     <module>cloud-provider-payment8081</module>
     <module>cloud-api-commons</module>
+    <module>cloud-consumer-order80</module>
   </modules>
   <!--统一管理jar包版本-->
   <properties>
