--- a/cloud-provider-payment8081/src/main/resources/application.yml
+++ b/cloud-provider-payment8081/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8081
+
 spring:
+  application:
+    name: cloud-payment-service
   datasource:
     url: jdbc:mysql://104.199.151.208:3306/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
@@ -16,3 +19,22 @@ spring:
 mybatis:
   type-aliases-package: com.mycloud.study.payment.dto
   mapper-locations: classpath:mapper/*.xml
+eureka:
+  client:
+    #表示是否将自己注册进EurekaServer默认为true。
+    register-with-eureka: true
+    #是否从EurekaServer抓取已有的注册信息，默认为true。单节点无所谓，集群必须设置为true才能配合ribbon使用负载均衡
+    fetchRegistry: true
+    service-url:
+      #单机版
+      defaultZone: http://localhost:7001/eureka
+      # 集群版
+      #defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka
+  instance:
+    instance-id: payment8001
+    #访问路径可以显示IP地址
+    prefer-ip-address: true
+    #Eureka客户端向服务端发送心跳的时间间隔，单位为秒(默认是30秒)
+    #lease-renewal-interval-in-seconds: 1
+    #Eureka服务端在收到最后一次心跳后等待时间上限，单位为秒(默认是90秒)，超时将剔除服务
+    #lease-expiration-duration-in-seconds: 2
