--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,11 @@
 
   <modules>
     <module>cloud-provider-payment8081</module>
+    <module>cloud-provider-payment8082</module>
     <module>cloud-api-commons</module>
     <module>cloud-consumer-order80</module>
     <module>cloud-eureka-server-7001</module>
+    <module>cloud-eureka-server-7002</module>
   </modules>
   <!--统一管理jar包版本-->
   <properties>
@@ -103,6 +105,7 @@
         <optional>true</optional>
       </dependency>
 
+      <!-- swagger -->
       <dependency>
         <groupId>io.springfox</groupId>
         <artifactId>springfox-swagger-ui</artifactId>
