--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
     <module>cloud-provider-payment8081</module>
     <module>cloud-provider-payment8082</module>
     <module>cloud-provider-payment8084</module>
+    <module>cloud-provider-payment8086</module>
     <module>cloud-api-commons</module>
     <module>cloud-consumer-order80</module>
+    <module>cloud-consumerzk-order80</module>
     <module>cloud-eureka-server-7001</module>
     <module>cloud-eureka-server-7002</module>
   </modules>
