--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <module>cloud-provider-payment8086</module>
     <module>cloud-api-commons</module>
     <module>cloud-consumer-order80</module>
+    <module>cloud-consumerconsul-order80</module>
     <module>cloud-consumerzk-order80</module>
     <module>cloud-eureka-server-7001</module>
     <module>cloud-eureka-server-7002</module>
