--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -2,8 +2,7 @@ server:
   port: 80
 spring:
   application:
-    name: cloud-order-service
-
+    name: cloud-consumer-feign
 eureka:
   client:
     #表示是否将自己注册进EurekaServer默认为true。
@@ -13,5 +12,12 @@ eureka:
     service-url:
       #单机
       defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
-      # 集群
-#      defaultZone: http://eureka7001.com:7001/eureka,http://eureka7002.com:7002/eureka  # 集群版
+
+ribbon:
+  #指的是建立连接所用的时间，适用于网络状况正常的情况下,两端连接所用的时间
+  ReadTimeout: 5000
+  #指的是建立连接后从服务器读取到可用资源所用的时间
+  ConnectTimeout: 5000
+
+
+
