--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <module>cloud-consumer-order80</module>
     <module>cloud-consumerconsul-order80</module>
     <module>cloud-consumerzk-order80</module>
+    <module>cloud-consumer-feign-order80</module>
     <module>cloud-eureka-server-7001</module>
     <module>cloud-eureka-server-7002</module>
   </modules>
